random flailing to make overflowing content stop

--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ a {
     float: right;
 }
 
+#layoutdiv {
+    height:100%
+}
+
 .flexcontainer {
     display: flex;
 }
@@ -246,8 +250,9 @@ label {
 }
 
 #caption {
-    position: relative;
+    position: absolute;
+    top: 100%;
     left: 20px;
     text-align: left;
-    width: 90%;
+    zoom: 200%
 }
